Database connectie, alleen highscores is nog hardcoded

--- a/arcade_game/arcade_game.csproj
+++ b/arcade_game/arcade_game.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Image\istockphoto-1182467404-170667a.jpg" />
     <Resource Include="istockphoto-1182467404-170667a.jpg" />
   </ItemGroup>
