--- a/arcade_game/App.config
+++ b/arcade_game/App.config
@@ -2,6 +2,6 @@
 <configuration>
 	<connectionStrings>
 		<add name="MyConnectionString"
-			 connectionString = "Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\gbuss\Source\Repos\mrgiel\arcade_game\arcade_game\Data\Database1.mdf;Integrated Security=True"/>
+			 connectionString = "Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\youss\Source\Repos\mrgiel\arcade_game\arcade_game\Data\Database1.mdf;Integrated Security=True"/>
 	</connectionStrings>
 </configuration>
